--- a/demo/styles/main.less
+++ b/demo/styles/main.less
@@ -55,7 +55,7 @@ nav {
 
 		line-height: 1.4em;
 
-		&[data-spy=code] {
+		&[data-scrollspy-listen=code] {
 			background-color: @red;
 		}
 	}
@@ -90,6 +90,10 @@ section {
 				display: block;
 				margin-left: 20px;
 				font-size: 16px;
+
+        .comment {
+          color: grey;
+        }
 			}
 		}
 	}
